# worker-service

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.development.yml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml  lint.yml
entity/: Cargo.toml
k8s/: Chart.yaml  values.yaml
k8s/templates/: deployment.yml
src/: main.rs
src/services/: greeter.rs
